BUGFIX: Prevent svgs with no sizes from being invisible

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_Image.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_Image.scss
@@ -15,6 +15,8 @@
 
     img {
       display: block;
+      width: 100%;
+      height: auto;
     }
 
     figcaption {
